@@ -22,12 +22,14 @@ bin/kafka-server-start.sh config/server.properties
 
 Finally, create the topics required for the project. In the third terminal, run the following commands:
 ```bash
+bin/kafka-topics.sh --create --topic ships-raw-AIS --bootstrap-server localhost:9092
 bin/kafka-topics.sh --create --topic ships-AIS --bootstrap-server localhost:9092
 bin/kafka-topics.sh --create --topic ships-scores --bootstrap-server localhost:9092
 ```
 
 If needed to remove the topics, run the following command:
 ```bash
+bin/kafka-topics.sh --delete --topic ships-raw-AIS --bootstrap-server localhost:9092
 bin/kafka-topics.sh --delete --topic ships-AIS --bootstrap-server localhost:9092
 bin/kafka-topics.sh --delete --topic ships-scores --bootstrap-server localhost:9092
 ```
@@ -36,6 +38,7 @@ Additionally, the following JVM argument needs to be added (Edit configurations 
 ```
 --add-opens java.base/java.util=ALL-UNNAMED
 --add-opens java.base/java.time=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
 ```
 ## Running the project
 In order to run the back-end of the project, multiple steps will have to be made.
@@ -58,11 +61,19 @@ but for not-yet-seen values it will contain previously calculated data.
 For full reset of the back-end state you can run the following commands (make sure the application is not runnning):
 ```bash
 bin/kafka-streams-application-reset.sh --application-id anomaly-detection-pipeline
+bin/kafka-topics.sh --delete --topic ships-raw-AIS --bootstrap-server localhost:9092
 bin/kafka-topics.sh --delete --topic ships-AIS --bootstrap-server localhost:9092
 bin/kafka-topics.sh --delete --topic ships-scores --bootstrap-server localhost:9092
+bin/kafka-topics.sh --create --topic ships-raw-AIS --bootstrap-server localhost:9092
 bin/kafka-topics.sh --create --topic ships-AIS --bootstrap-server localhost:9092
 bin/kafka-topics.sh --create --topic ships-scores --bootstrap-server localhost:9092
 ```
+
+Sometimes Kafka might not start if the logs of Zookeeper and the Kafka server are not cleared. Assuming that `/tmp/kafka-logs` and `/tmp/zoekeeper` are the locations of the logs, run the following commands to delete them:
+```bash
+rm -rf /tmp/kafka-logs /tmp/zookeeper
+```
+
 
 ### Start the pipeline and web server
 Run the main project in IntelliJ (or just Gradle). This will start the pipeline and start listening for messages in the needed Kafka topics.
